--- a/vagrant/alanhohn-hadoop/playbook.yml
+++ b/vagrant/alanhohn-hadoop/playbook.yml
@@ -61,7 +61,14 @@
   - name: spark current version link
     file: path=/opt/spark src=/opt/spark-{{spark_version}}-bin-hadoop2.6 state=link owner=vagrant group=vagrant
   - name: hadoop conf dir in environment
-    copy: dest=/etc/profile.d/hadoop-conf.sh content="export HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop" mode=0644
+    copy:
+      dest: /etc/profile.d/hadoop-conf.sh
+      content: |
+        export HADOOP_HOME=/opt/hadoop
+        export HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
+        export SPARK_HOME=/opt/spark
+        export PATH=$HADOOP_HOME/bin:$SPARK_HOME/bin:$PATH
+      mode: 0644
   - name: service files
     copy: dest=/lib/systemd/system/{{item}} src=files/{{item}} mode=0644 owner=root group=root
     with_items:
